--- a/src/main.css
+++ b/src/main.css
@@ -1,3 +1,14 @@
+html {
+  --bg: #181A1B;
+  --grey-0: #2b2b2b;
+  --grey-1: #616462;
+  --grey-2: #e8e6e3;
+  --purple-1: #ab8fb3;
+  --purple-2: #ccb8d0;
+  --teal-0: #1a745c;
+  --teal-1: #4cbb89;
+  --teal-2: #83e3c1;
+}
 /*
 * Customized verison of Skeleton V2.0.4
 * Copyright 2014, Dave Gamache
@@ -19,14 +30,16 @@ body {
   line-height: 1.6;
   font-weight: 300;
   font-family: "Nunito", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color: #222; }
+  color: var(--grey-2);
+}
 
 html, body {
     width: 100%;
     height: 100%;
     margin: 0;
     padding: 0;
-    background: #FFF;
+    background: var(--bg);
+    color: var(--grey-2);
 }
 
 
@@ -51,7 +64,7 @@ p {
   margin-top: 0; }
 
 b, strong {
-    color: #444;
+    color: var(--grey-2);
 }
 
 
@@ -61,7 +74,7 @@ a {
   color: #4cbb89;
   text-decoration: none;}
 a:hover {
-  color: #714868;
+  color: #ab94a6;
   transition: color linear 0.15s; }
 
 
@@ -75,7 +88,7 @@ input[type="button"] {
   display: inline-block;
   height: 38px;
   padding: 0 30px;
-  color: #555;
+  color: var(--purple-1);
   text-align: center;
   font-size: 11px;
   font-weight: 600;
@@ -85,7 +98,7 @@ input[type="button"] {
   white-space: nowrap;
   background-color: transparent;
   border-radius: 4px;
-  border: 1px solid #bbb;
+  border: 1px solid var(--grey-1);
   cursor: pointer;
   transition: background-color linear 0.15s, border-color linear 0.15s;
   box-sizing: border-box; }
@@ -99,8 +112,8 @@ button:focus,
 input[type="submit"]:focus,
 input[type="reset"]:focus,
 input[type="button"]:focus {
-  color: #333;
-  border-color: #888;
+  color: var(--purple-2);
+  border-color: var(--grey-1);
   outline: 0; }
 .button.button-primary,
 button.button-primary,
@@ -121,8 +134,8 @@ input[type="submit"].button-primary:focus,
 input[type="reset"].button-primary:focus,
 input[type="button"].button-primary:focus {
   color: #FFF;
-  background-color: #714868;
-  border-color: #714868; }
+  background-color: #ab94a6;
+  border-color: #ab94a6; }
 
 
 /* Forms
@@ -138,8 +151,8 @@ textarea,
 select {
   height: 38px;
   padding: 6px 10px; /* The 6px vertically centers text on FF, ignored by Webkit */
-  background-color: #fff;
-  border: 1px solid #D1D1D1;
+  background-color: var(--bg);
+  border: 1px solid var(--grey-0);
   transition: border-color linear 0.15s;
   border-radius: 4px;
   box-shadow: none;
@@ -229,7 +242,7 @@ th,
 td {
   padding: 12px 15px;
   text-align: left;
-  border-bottom: 1px solid #E1E1E1; }
+  border-bottom: 1px solid var(--grey-0); }
 th:first-child,
 td:first-child {
   padding-left: 0; }
@@ -264,30 +277,48 @@ form {
     z-index: 10;
 }
 
+.rc-slider-rail {
+  background-color: var(--grey-0) !important;
+}
+
 .rc-slider .rc-slider-track {
-    background-color: #83e3c1;
+    background-color: var(--teal-0);
 }
 
 .rc-slider .rc-slider-handle,
 .rc-slider .rc-slider-handle:hover,
 .rc-slider .rc-slider-handle:active,
 .rc-slider .rc-slider-handle:focus {
-    border: 2px solid #83e3c1;
+    background-color: var(--bg);
+    border: 2px solid var(--teal-0);
 }
 
 .rc-slider .rc-slider-handle:hover,
 .rc-slider .rc-slider-handle:active,
 .rc-slider .rc-slider-handle:focus {
-    box-shadow: 0 0 5px #83e3c1;
+    box-shadow: 0 0 5px var(--teal-1);
 }
 
 .tippy-tooltip.pubgsh-theme {
-  background: #F7F7F7;
-  border: 1px solid #ddd;
+  background: var(--grey-0);
+  border: 1px solid var(--grey-1);
   border-radius: 3px;
-  color: black;
+  color: var(--grey-2);
 }
 
 .tippy-tooltip.pubgsh-theme .tippy-arrow {
-    border-left: 7px solid #ddd;
+    border-left: 7px solid var(--grey-1);
+}
+
+body::-webkit-scrollbar {
+  width: 1em;
+}
+
+body::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
 }
