--- a/src/main.css
+++ b/src/main.css
@@ -310,15 +310,18 @@ form {
     border-left: 7px solid var(--grey-1);
 }
 
-body::-webkit-scrollbar {
-  width: 1em;
+body, html {
+scrollbar-color: var(--grey-0) var(--bg);
 }
 
-body::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+body::-webkit-scrollbar,
+html::-webkit-scrollbar {
+  width: 10px;
+  background: none;
 }
 
-body::-webkit-scrollbar-thumb {
-  background-color: darkgrey;
-  outline: 1px solid slategrey;
+body::-webkit-scrollbar-thumb,
+html::-webkit-scrollbar-thumb {
+    background: var(--grey-0);
+    border-radius: 4px;
 }
