--- a/src/main.css
+++ b/src/main.css
@@ -57,7 +57,7 @@ h5 { font-size: 1.8rem; line-height: 1.5; }
 h6 { font-size: 1.5rem; line-height: 1.6; }
 
 @media (max-width: 700px) {
-    h5 { font-size: 1.8rem; line-height: 1.5; margin-bottom: 1rem; font-weight: 400; background: #FAFAFA}
+    h5 { font-size: 1.8rem; line-height: 1.5; margin-bottom: 1rem; font-weight: 400;}
 }
 
 p {
